--- a/01/index.html
+++ b/01/index.html
@@ -119,7 +119,7 @@
 	}
     $('.downBtn').click(function () {
         var key = "mggpokerdownload";
-        var value = "true," + "20170727";
+        var value = "true," + "20190708";
         localStorage.setItem(key, value);
     });
     $(document).ready(function () {
@@ -175,7 +175,7 @@
 			location.href=  'itms-services://?action=download-manifest&amp;url=';
 			showtips();
 		}else{
-			location.href='';
+			location.href='https://raw.githubusercontent.com/dd2019dd/dd2019dd.github.io/master/dl/rich/rich10000.apk';
 		}
 	}
 	
