--- a/02/index.html
+++ b/02/index.html
@@ -19,6 +19,7 @@
 	new OpenInstall({
 		/*appKey必选参数，openinstall平台为每个应用分配的ID*/
 		appKey : "3rqhu6",
+		channelCode: "1111",
 		/*可选参数，自定义android平台的apk下载文件名，只有apk在openinstall托管时才有效；个别andriod浏览器下载时，中文文件名显示乱码，请慎用中文文件名！*/
 		//apkFileName : 'io.openinstall.monitor-v1.0.4.apk',
 		/*可选参数，是否优先考虑拉起app，以牺牲下载体验为代价*/
