--- a/dl/rich/ipa/RICH777.html
+++ b/dl/rich/ipa/RICH777.html
@@ -1,2 +1,2 @@
 <a
-    href="itms-services://?action=download-manifest&url=https://bbdown.oss-cn-hangzhou.aliyuncs.com/iosQieYe/40009.plist">download</a>
+    href="itms-services://?action=download-manifest&url=https://cfg.bjl3322.com:8119/dl/rich/ipa/RICH777.plist">download</a>
